kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flashmind
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flashmind
  template:
    metadata:
      labels:
        app: flashmind
    spec:
      containers:
        - name: backend
          image: us-west1-docker.pkg.dev/cs144-25s-team23/flashmind/flashmind:$SHORT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
