kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashmind
spec:
  type: LoadBalancer
  selector:
    app: flashmind
  ports:
  - port: 80
    targetPort: 3001
